# DocumentStream

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  project-brief.md  pyproject.toml  start-here.md
.engineering-team/: architecture-plan.md
.github/workflows/: ci.yml  deploy.yml  docker.yml
docs/: architecture.md  chaos-experiments.md  classification.md  demo-guide.md  dictionary.md  implementation-plan.md  pipeline.md
grafana/: documentstream-dashboard.json
infra/: helm-install.sh  reset-demo.sh  setup.sh  teardown.sh
journal/: 260328-project-kickoff.md  260329-add-readme.md  260329-redis-pipeline-and-k8s-manifests.md  260330-azure-cost-investigation.md  260330-day3-keda-grafana-chaos-locust-cicd.md  260401-azure-blob-storage-and-metrics.md  260402-chaos-mesh-testing-and-demo-rehearsal.md
k8s/base/: classify-deployment.yaml  configmap.yaml  extract-deployment.yaml  gateway-deployment.yaml  gateway-service.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  postgres-deployment.yaml  servicemonitor.yaml  store-deployment.yaml
k8s/chaos/: cpu-stress.yaml  network-delay.yaml  pod-kill.yaml
k8s/scaling/: classify-scaledobject.yaml  extract-scaledobject.yaml  store-scaledobject.yaml
learning/: 260330-deploying-to-aks.md  260331-conceptual-map.md  260331-day4-aks-operations-grafana-locust.md
locust/: locustfile.py
src/gateway/: Dockerfile  app.py
tests/: conftest.py  test_classify.py  test_extract.py  test_gateway.py  test_gateway_async.py  test_generator.py  test_queue.py  test_runners.py  test_semantic.py  test_store.py
(+15 files in other folders)
