[project]
name = "documentstream"
version = "0.1.0"
description = "K8s-native document processing pipeline for commercial real estate loan documents"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "fpdf2>=2.8.0",
    "faker>=37.0.0",
    "pymupdf>=1.25.0",
    "redis>=5.2.0",
    "psycopg[binary]>=3.2.0",
    "sentence-transformers[onnx]>=4.1.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.20",
    "azure-storage-blob>=12.24.0",
    "prometheus_client>=0.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "coverage>=7.6.0",
    "httpx>=0.28.0",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["gateway", "worker", "generator"]
